Add reset button and event handler

--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,11 @@ canvas {
     display: block;
     margin: 0 auto;
 }
+
+#clear {
+    margin: 0 auto;
+    display: block;
+}
 </style>
 
 <!-- JS -->
@@ -45,4 +50,5 @@ canvas {
 <div id="main">
     <h1>Pictionary</h1>
     <canvas id="canvas"></canvas>
+    <button id="clear">Clear Canvas</button>
 </div>
