--- a/public/index.html
+++ b/public/index.html
@@ -49,6 +49,11 @@ canvas {
 
 <div id="main">
     <h1>Pictionary</h1>
+    <div id="top-message">
+        <div id="guess" style="display: none">
+            Make a guess: <input type="text">
+        </div>
+    </div>
     <canvas id="canvas"></canvas>
     <button id="clear">Clear Canvas</button>
 </div>
