Fix typos with guessing input/handler

--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@ canvas {
 <div id="main">
     <h1>Pictionary</h1>
     <div id="top-message">
-        <div id="guess" style="display: none">
+        <div id="guess" style="display: block">
             Make a guess: <input type="text">
         </div>
     </div>
