add socket events and view updates for guesses

--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,9 @@ canvas {
         <div id="guess" style="display: block">
             Make a guess: <input type="text">
         </div>
+        <div id="guess-list">Guesses: </div>
     </div>
+    
     <canvas id="canvas"></canvas>
     <button id="clear">Clear Canvas</button>
 </div>
