Add wordbank functionality and ui to show word to drawer

--- a/public/index.html
+++ b/public/index.html
@@ -53,6 +53,7 @@ canvas {
         <div id="guess" style="display: block">
             Make a guess: <input type="text">
         </div>
+        <div id="word" style="display: none"></div>
         <div id="guess-list">Guesses: </div>
     </div>
     
