--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<title>Pictionary</title>
+<title>qwiktionary</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
@@ -48,7 +48,7 @@ canvas {
 <script src="main.js"></script>
 
 <div id="main">
-    <h1>Pictionary</h1>
+    <h1>qwiktionary</h1>
     <div id="top-message">
         <div id="claim">
             <button>I want to draw!</button>
@@ -59,7 +59,7 @@ canvas {
         <div id="word" style="display: none"></div>
         <div id="guess-list">Guesses: </div>
     </div>
-    
+
     <canvas id="canvas"></canvas>
     <button id="clear">Clear Canvas</button>
 </div>
