Pull out css and clean up html

--- a/public/index.html
+++ b/public/index.html
@@ -1,64 +1,36 @@
-<!doctype html>
-<title>qwiktionary</title>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+<!DOCTYPE html>
 
-<!-- CSS -->
-<style>
-* {
-    box-sizing: border-box;
-}
+<head>
+  <title>qwiktionary</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-body {
-    color: #1E2835;
-    background-color: #F8F8F8;
-    font-size: 1.5em;
-}
+  <!-- CSS -->
+  <link rel="stylesheet" href="/css/styles.css" />
 
-h1 {
-    background-color: #9ABBFF;
-    margin:  0 0 20px 0;
-    padding: 20px;
-    text-align: center;
-}
+  <!-- JS -->
+  <script src="//code.jquery.com/jquery-2.1.0.js"></script>
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="main.js"></script>
+</head>
 
-#top-message {
-    text-align: center;
-    padding: 10px;
-}
+<body>
 
-canvas {
-    width: 800px;
-    height: 600px;
-    border: 1px #C7CACD solid;
-    display: block;
-    margin: 0 auto;
-}
-
-#clear {
-    margin: 0 auto;
-    display: block;
-}
-</style>
-
-<!-- JS -->
-<script src="//code.jquery.com/jquery-2.1.0.js"></script>
-<script src="/socket.io/socket.io.js"></script>
-<script src="main.js"></script>
-
-<div id="main">
+  <div id="main">
     <h1>qwiktionary</h1>
     <div id="top-message">
-        <div id="claim">
-            <button>I want to draw!</button>
-        </div>
-        <div id="guess" style="display: block">
-            Make a guess: <input type="text">
-        </div>
-        <div id="word" style="display: none"></div>
-        <div id="guess-list">Guesses: </div>
+      <div id="claim">
+        <button>I want to draw!</button>
+      </div>
+      <div id="guess" style="display: block">
+        Make a guess: <input type="text">
+      </div>
+      <div id="word" style="display: none"></div>
+      <div id="guess-list">Guesses: </div>
     </div>
 
     <canvas id="canvas"></canvas>
     <button id="clear">Clear Canvas</button>
-</div>
+  </div>
+
+</body>
