Reorganize main.js

--- a/public/index.html
+++ b/public/index.html
@@ -19,11 +19,11 @@
   <div id="main">
     <h1>qwiktionary</h1>
     <div id="top-message">
-      <div id="claim">
-        <button>I want to draw!</button>
+      <div>
+        <button id="claim">I want to draw!</button>
       </div>
-      <div id="guess" style="display: block">
-        Make a guess: <input type="text">
+      <div style="display: block">
+        Make a guess: <input id="guess" type="text">
       </div>
       <div id="word" style="display: none"></div>
       <div id="guess-list">Guesses: </div>
