--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,9 @@
 </head>
 
 <body>
-
+  <div id="react-app">
+  </div>
+  </div>
   <div id="main">
     <h1>qwiktionary</h1>
     <div id="top-message">
@@ -32,5 +34,5 @@
     <canvas id="canvas"></canvas>
     <button id="clear">Clear Canvas</button>
   </div>
-
+  <script src="/js/app.js"></script>
 </body>
