--- a/public/index.html
+++ b/public/index.html
@@ -15,24 +15,13 @@
 </head>
 
 <body>
-  <div id="react-app">
-  </div>
-  </div>
-  <div id="main">
-    <h1>qwiktionary</h1>
-    <div id="top-message">
-      <div>
-        <button id="claim">I want to draw!</button>
-      </div>
-      <div style="display: block">
-        Make a guess: <input id="guess" type="text">
-      </div>
-      <div id="word" style="display: none"></div>
-      <div id="guess-list">Guesses: </div>
-    </div>
 
-    <canvas id="canvas"></canvas>
-    <button id="clear">Clear Canvas</button>
+  <div id="main">
+
+    <h1>qwiktionary</h1>
+    <div id="react-app"></div>
+
   </div>
+
   <script src="/js/app.js"></script>
 </body>
